--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ body{
 .margin-top-20{
 	margin-top: 20px;
 }
+.margin-bottom-20{
+	margin-bottom: 20px;
+}
 .margin-left-20{
 	margin-left: 20px;
 }
@@ -30,4 +33,8 @@ body{
 }
 .footer{
 	margin: 20px 0 0 0;
+}
+.table-separate{
+  border-collapse: separate;
+  border-spacing: 2px;
 }
