--- a/style.css
+++ b/style.css
@@ -19,8 +19,14 @@ body{
 .margin-bottom-20{
 	margin-bottom: 20px;
 }
+.margin-bottom-10{
+	margin-bottom: 10px;
+}
 .margin-left-20{
 	margin-left: 20px;
+}
+.margin-right-10{
+	margin-right: 10px;
 }
 .dashed-hr{
 	border-top: 2px dashed #eeeeee;
