--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ body{
 .margin-left-20{
 	margin-left: 20px;
 }
+.margin-left-10{
+	margin-left: 10px;
+}
 .margin-right-10{
 	margin-right: 10px;
 }
