--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+html{
+	height: 100%;
+}
 body{
 	font-size: 13px;
 	padding: 0;
@@ -6,6 +9,7 @@ body{
 	letter-spacing: 1px;
 	line-height: 25px;
 	background: transparent url('../img/bg.jpg') scroll no-repeat 50% 50%;
+	height: 100%;
 }
 
 a:link, a:visited{
