--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,7 @@ a:hover, a:active{
 	margin-right: -1px;
 }
 .footer{
-	margin: 20px 0 0 0;
+	margin: 20px 0;
 	font-size: 12px;
 }
 .table-separate{
